<resources>
    <string name="user_">本协议是用户（以下简称“您”或“用户”）与潜存信息科技（上海）有限公司（以下简称“夺饭点”）签署的协议，请您在使用本软件和服务（具体间第一条）之前阅读本协议的全部内容，特别是第五条“有限责任”的约定。一旦您接受本协议或使用本软件和服务，本协议即对您生效。如果您在安装本软件后因任何原因欲放弃使用，可使用各操作系统提供的删除方式删除本软件。\n
    1.服务内容和变更\n
      1.1本软件向用户提供基于夺饭点平台的网络购物数据服务，用户可以通过本软件端搜索、筛选、查看自己感兴趣的其他人群的购物统计数据，同时支持查看来自夺饭点平台的相关商品信息。\n
      1.2为及时向用户提供新功能和/或修正软件中可能存在的漏洞，本软件提供自动升级和/或提示升级功能。用户使用升级后的软件和服务业需遵守本协议的约定。\n
      1.3如果本软件或服务未能获得足够认可或者基于类似考虑，则夺饭点可能自行终止提供本软件和服务，届时您将无法继续使用本软件和服务。\n

    2.特别提醒\n
      2.1网络费用：夺饭点目前不对下载或使用本软件和服务收取任何费用，但在您下载或使用本软件时可能需要向您的运营商支付网络通讯等费用，该等费用将根据您的运营商的收费方案而定，并需由您承担。\n
      2.2注意安全：本软件包含地图信息，但并非专门为路线导航设计，不建议作为行程参考且提醒您驾车时请勿使用软件。\n
      2.3非商业使用：本软件仅用于非商业用途，这表示您只能将它用于个人用途。在遵守本协议约定的前提下，用户将获得对本软件的全球范围内的、非独家的、不可再许可的使用权。如果需要进行商业性的销售、复制和散发，例如软件预装和捆绑，必须事先获得夺饭点的书面授权或另行许可。\n
      2.4正规渠道下载：由于本软件可以通过互联网等途径下载、传播，夺饭点建议用户直接从夺饭点制定的发行渠道（如夺饭点官方市场渠道）或者授权发型的媒介获得本软件。对于从非夺饭点指定网站下载的本软件以及从非淘宝发行的媒介上获得的本软件，夺饭点无法保证该软件是否感染计算机病毒、是否隐藏有伪装的木马程序或者恶意代码等，因此夺饭点也不承担由此引起的直接和间接损害赔偿责任。\n
      2.5有限服务：本软件目前仅提供部分地区的数据服务，主要是中国大陆地区，暂时不提供其他地区的服务；另外位置数据有多种来源，基于目前的技术也可能并不准确。上述情况请您理解并谅解。\n

    3.相关协议和数据政策\n
      3.1如用户使用夺饭点平台账号登陆本软件，则用户在使用本软件和服务时还需遵守夺饭点平台公布的《夺饭点用户协议》或基于账号服务的协议。\n
      3.2您同意夺饭点通过本软件收集、使用、共享和传送您的数据，这些数据包括但不限于位置数据。本软件和服务对用户信息的获取、存储、使用等均将遵循夺饭点平台公布的《法律声明》以及其中包含的个人信息保护规定。\n

    4.知识产权\n
      4.1本软件受《中华人民共和国著作权法》及有关国际著作权条约和其他知识产权法律法规的保护。\n
      4.2本软件（包含但不限于本软件中所含的任何图像、照片、动画、录像、录音、音乐、文字和附加程序（除开源程序以及第三方提供的内容意外））、随附的帮助材料、及本软件的任何副本的一切所有权和知识产权，均有夺饭点拥有。您同意不删除、隐匿或更改夺饭点或任何第三方的版权声明、商标或其他所有权声明。\n
      4.3用户不得对本软件进行修改、改编、编译、准备衍生产品、反向编译、反向工程、分解或尝试从本软件派生源代码，违者属于侵权行为，并承担由此产生的法律后果。\n

    5.有限责任\n
      5.1虽然本软件已经竞购严格的测试，但鉴于用户终端软硬件环境的差异性和复杂性，夺饭点并不能保证本软件所提供的各项功能在任何情况下都能正常执行或达到用户所期望的结果。用户同意：对于安装、使用本软件造成的任何损失，夺饭点不承担任何法律责任。上述损失可能源自（包括但不限于）本软件与用户安装使用的其他软件的不兼容，或由于硬件系统不兼容而造成的用户不能使用本产品而造成的损失，包括但不限于任何直接或间接的损失。\n
      5.2夺饭点对本软件和服务中包含的数据的准确性、及时性不做保证，本软件提供的数据服务所展示的任何信息仅供参考之用，不做可供依赖的行动建议。\n
      5.3本软件包含第三方提供的内容，例如地图，基于地图提供方的要求，夺饭点向用户转述地图提供方的以下声明：“因任何人使用地图应用端产生任何问题或事故的，由您自行承担全部责任，地图提供方对此不承担任何责任。”\n
      5.4为提供更多服务，本软件可能为用户提供同时安装第三方软件的选择。用户可选择是否同时安装第三方软件，但夺饭点不承担由第三方软件引起的直接和间接责任。\n

    6.其他条款\n
      6.1本协议使用中华人民共和国大陆地区法律。因夺饭点与用户就本协议的签订、履行或届时发生争议，双方应努力友好协商解决。如协商不成，夺饭点和用户均同意由夺饭点住所地法院管辖审理双方的纠纷或争议。\n
      6.2夺饭点保留对本协议进行修改的权利，相关内容将公布于本软件指向的网络页面上或以其他方式通知用户。除非您明示并通知夺饭点不愿接受调整后的协议内容或自行选择停止使用本软件，否则本协议修改后的新版本将于公布之日或通知另行指定的日期开始生效。</string>
    <string name="title_billtime">下单时间:</string>
    <string name="title_billstate">定单状态:</string>
    <string name="title_billnumber">定单号:</string>
    <string name="tab_area">商圈</string>
    <string name="tab_kouwei">口味</string>
    <string name="tab_default">默认</string>
    <string name="tab_all">全部分类</string>
    <string name="activity_hello_world">helloword</string>
    <string name="pay_warning">1.请仔细核对您的定单信息\n2.请仔细阅读定单的重要说明\n3.请30秒内确认支付，否则将自动取消定单。</string>
    <string name="unpay_warning">1.请仔细核对您的定单信息\n2.请仔细阅读定单的重要说明\n3.请确认无误后点击确认退定。</string>
    <string name="pay_tips">小提示:请在预定时间的15分钟内到店,否则该桌将自动释放给公众,服务费不予退还,如有特殊需求请联系商家</string>
    <string name="pay_vital_tips">1.额定消费要求（如消费低于XXX元，则用订金补足差额，剩余订金返还到会员的支付账户）\n\n2.定单成功后，会员提前预订时间2小时退订或拨打电话XXX-XX-XXX退订，同时您的服务费与订金直接退入您夺饭点会员账户，期待您下次消费。\n\n3.逾期：您逾期之后如果还需要进行VIP服务或其他服务请联系我们客户电话400-xxxx-xxxx。</string>
    <string name="pay_vital_tips_title">重要说明</string>
    <string name="pay_infomation">消费满足350元</string>
    <string name="yuan">&#160;元</string>
    <string name="pay_infomation_remarks">如果消费小于350元,餐厅将按350元收取餐费</string>
    <string name="male">先生</string>
    <string name="exit_login">退出</string>
    <string name="account_mngmt">账户管理</string>
    <string name="attention_username">用户名:请输入手机号</string>
    <string name="attention_userpwd">密码:请输入密码</string>
    <string name="attention_empty_name_or_password">用户名和密码不能为空</string>
    <string name="attention_empty_name">用户名不能为空</string>
    <string name="attention_empty_name_or_password_is_incorrect">请检查用户名密码是否正确</string>
    <string name="attention_pwd">密码:</string>
    <string name="ourfriend">夺饭点的伙伴</string>
    <string name="mychoice">我的点菜</string>
    <string name="qrcode">二维码扫描</string>
    <string name="share">分享到朋友圈</string>
    <string name="mybill">我的定单</string>
    <string name="settings">设置</string>
    <string name="yijian">意见反馈</string>
    <string name="scan">扫一扫</string>
    <string name="female">女士</string>
    <string name="title_price_average">人均:</string>
    <string name="btn_confirm">确认</string>
    <string name="login_error">登录失败,请检查用户名和密码是否正确</string>
    <string name="login_success">登录成功</string>
    <string name="btn_regist">注册</string>
    <string name="title_bill_confirm">定单确认</string>
    <string name="title_bill_pay">定单支付</string>
    <string name="title_bill_unpay">定单退定</string>
    <string name="btn_confirm_unpay">确认退定</string>
    <string name="title_mybill">我的定单</string>
    <string name="title_user">会员中心</string>
     <string name="title_login_to_get_services">点击登录获取更多特权</string>
    <string name="score1">口味 8.1</string>
    <string name="score2">环境 8.5</string>
    <string name="score3">服务 8.9</string>
    <string name="login">登录</string>
    <string name="no_data">无</string>
    <string name="no_data_supply">未提供</string>
    <string name="no_net">无网络,请先开启网络</string>
    <string name="app_name">夺饭点</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ln_proj_name">夺饭点</string>
    <string name="setting">设置</string>
    <string name="title_book">定座点餐</string>
    <string name="listview_item_storename">店名</string>
    <string name="listview_item_pricelevel">价格</string>
    <string name="listview_item_environmentlevel">环境</string>
    <string name="listview_item_flavorlevel">味道</string>
    <string name="listview_item_price">人均:</string>
    <string name="listview_item_distance">距离</string>
    <string name="title_storeinfo">餐厅信息</string>
    <string name="btn_choosefood">选菜</string>
    <string name="btn_choosetable">选桌</string>
    <string name="store_storeaddress">地址</string>
    <string name="phone_number">联系电话</string>
    <string name="title_book_table">抢位</string>
    <string name="btn_select_table">选座位</string>
    <string name="btn_select_time">选时间</string>
    <string name="btn_commit_booktable">提交定单</string>
    <string name="btn_pick_food_str">提前点菜</string>
    <string name="selected_time_info">点击选择想要预定的日期</string>
    <string name="selected_table_info">请选择您的专座</string>
    <string name="selected_person_number">请选择人数</string>
    <string name="can_select_time">可预定的时间:</string>
    <string name="btn_back_string">返回</string>
    <string name="title_table_info">返回</string>
    <string name="title_shop_info">其他分店</string>
    <string name="title_regist">注册</string>
    <string name="title_login">登录</string>
    <string name="tv_survey">真诚的希望倾听您的珍贵建议，帮助我们提升本餐厅的品质，以便为顾客提供更加完美，优质的服务。</string>
    <string name="msg_no_sdcard">"未检测到SD卡,无法使用相机"</string>
    <string name="dialog_msg_media_unmounted">无法访问外置存储卡,请检查....</string>
    <string name="msg_progressdialog_wait">操作处理中，请稍后....</string>
    <string name="button_login">"登录"</string>
    <string name="button_close">关闭</string>
    <string name="button_save">保存</string>
    <string name="button_next">下一步</string>
    <string name="menu_picture_gallery">上传手机中的照片</string>
    <string name="menu_picture_camera">拍照上传</string>
    <string name="button_webview_goback">回退</string>
    <string name="msg_no_mm">"名号不存在，请检查"</string>
    <string name="msg_read_no_data_when_download_vcf">请检查名片信息是否完整或存在，读取到-1</string>
    <string name="msg_default_status">请将二维码等放置于红框内扫描，注意手勿抖动，勿倾斜</string>
    <string name="msg_default_status_on">关灯</string>
    <string name="msg_default_status_off">开灯</string>
    <string name="msg_default_type">类型</string>
    <string name="msg_existing_barcode">不存在barcode图片，操作取消</string>
    <string name="msg_encode_barcode_failed">找不到条码。</string>
    <string name="msg_encode_contents_failed">不能从已有数据中读取条码。</string>
    <string name="msg_default_contents">内容</string>
    <string name="msg_default_format">格式</string>
    <string name="menu_history">历史</string>
    <string name="menu_input">输入名片码</string>
    <string name="button_google_shopper">谷歌购物</string>
    <string name="msg_share_explanation">你可以在你的手机屏幕上显示条码，并使用其他手机扫描此条码方式进行分享</string>
    <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
    <string name="button_ignore">返回扫描</string>
    <string name="button_share_by_sms">通过短信分享</string>
    <string name="button_share_clipboard">分享剪切板</string>
    <string name="button_share_by_email">通过email分享</string>
    <string name="result_text">找到纯文本</string>
    <string name="result_haier_barcode">找到海尔识别码</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_encode_in_progress">正在生成条码\u2026</string>
    <string name="msg_google_shopper_missing">谷歌购物未安装</string>
    <string name="msg_install_google_shopper">谷歌购物结合条码扫描价格，评论和不打开浏览器。您想尝试吗？</string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="msg_local_intent_failed">抱歉，文件无法打开</string>
    <string name="button_ok">确定</string>
    <string name="button_cancel">取消</string>
    <string name="button_modify">修改</string>
    <string name="msg_not_our_results">你离开此应用程序。搜索结果，您会看到的都没有涉及这个应用程序</string>
    <string name="history_clear_one_history_text">删除</string>
    <string name="history_clear_text">删除历史</string>
    <string name="history_email_title">条码扫描器历史</string>
    <string name="history_empty">空的</string>
    <string name="history_empty_detail">没有条码扫描已记录</string>
    <string name="history_send">发送历史</string>
    <string name="history_title">历史</string>
    <string name="msg_sure">你肯定吗？</string>
    <string name="msg_save_ok">保存成功</string>
    <string name="msg_sd_unavailable">SD无法访问...</string>
    <string name="msg_camera_framework_bug">出错咯，机器人相机出现问题。您可能需要重新启动设备。</string>
    <string name="result_address_book">找到联系人信息</string>
    <string name="button_add_contact">保存简名片</string>
    <string name="button_getbid">获取档案</string>
    <string name="button_get_cloud_card">下载云名片</string>
    <string name="button_get_and_exchange">下载并交换</string>
    <string name="preferences_custom_product_search_summary">使用％s作为产品ID占位</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="result_calendar">找到日历事件</string>
    <string name="result_email_address">找到email地址</string>
    <string name="result_geo">找到地理坐标</string>
    <string name="result_isbn">找到图书</string>
    <string name="btn_commit">提交</string>
  <string name="bill_number">订单号:</string>
    <string name="member_info_avator">头像</string>
    <string name="member_info_name">昵称</string>
    <string name="member_info_login_password">登录密码</string>
    <string name="member_info_pay_password">支付密码</string>
    <string name="member_info_tel">手机号</string>
    <string name="member_info_modify_title">修改</string>
    <string name="member_info_modify_name">修改昵称</string>
    <string name="survey_answer1">非常满意</string>
    <string name="survey_answer2">一般</string>
    <string name="survey_answer3">需要改进</string>
      <string name="button_update">版本更新</string>
       <string name="button_about_me">关于我们</string>
       <string name="button_clear_cache">清除缓存</string>
       <string name="button_feedback">意见反馈</string>
       <string name="format_current_version">Build Version %s</string>
          <string name="msg_app_has_latest">"已是最新版本"</string>
          <string name="hint_feedback">"感谢您关注夺饭点，希望你多提意见和建议"</string>
          <string name="hint_your_contact">"你的联系方式:"</string>
          <string name="hint_email">"您的Email"</string>
          <string name="title_has_xiaofei_bill">"已消费金额"</string>
          <string name="title_has_tuiding_bill">"已退定金金额"</string>
          <string name="title_has_pay_bill">"已付定金金额"</string>
          <string name="title_real_fee">"实际消费:"</string>
          <string name="format_title_real_fee">"￥ %s"</string>
          <string name="title_back_dingjin">"退返金额:"</string>
</resources>