<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:meminfo="http://schemas.android.com/apk/res/com.lnwoowken.lnwoowkenbook"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include layout="@layout/activity_user_center_top" />

        <!-- avator item -->
        <com.lnwoowken.lnwoowkenbook.view.MemberInfoItemLayout
            android:id="@+id/member_info_avator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            meminfo:__icon="@drawable/gray_right_arrow"
            meminfo:__summery="@string/member_info_modify_title"
            meminfo:__title="@string/member_info_avator" />
        
        <View android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/gray"/>
        <!-- name item -->
        <com.lnwoowken.lnwoowkenbook.view.MemberInfoItemLayout
            android:id="@+id/member_info_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            meminfo:__icon="@drawable/gray_right_arrow"
            meminfo:__summery="@string/member_info_modify_title"
            meminfo:__title="@string/member_info_name" />
        <View android:layout_width="fill_parent"
            android:layout_height="@dimen/member_info_item_max_gap"
            android:background="@color/gray"/>
        <!-- login password item -->
        <com.lnwoowken.lnwoowkenbook.view.MemberInfoItemLayout
            android:id="@+id/member_info_login_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            meminfo:__icon="@drawable/gray_right_arrow"
            meminfo:__summery="@string/member_info_modify_title"
            meminfo:__title="@string/member_info_login_password" />
        
        <View android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/gray"/>
        <!-- pay password item -->
        <com.lnwoowken.lnwoowkenbook.view.MemberInfoItemLayout
            android:id="@+id/member_info_pay_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            meminfo:__icon="@drawable/gray_right_arrow"
            meminfo:__summery="@string/member_info_modify_title"
            meminfo:__title="@string/member_info_pay_password" />

        <View android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/gray"/>
        <!-- tel item -->
        <com.lnwoowken.lnwoowkenbook.view.MemberInfoItemLayout
            android:id="@+id/member_info_tel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            meminfo:__icon="@drawable/gray_right_arrow"
            meminfo:__summery="@string/member_info_modify_title"
            meminfo:__title="@string/member_info_tel" />
    </LinearLayout>

</ScrollView>