<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/wt"
    android:paddingLeft="15dip"
    android:paddingRight="15dip"
    android:paddingTop="10dip"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/feedback"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/maincolor_boder_white_input"
        android:minLines="6"         
        android:gravity="top"
        android:textColor="@color/blk"
        android:textSize="12sp"
        android:hint="@string/hint_feedback"/>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <EditText android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_your_contact"
            android:background="@null"
            android:textSize="12sp"
            android:enabled="false"/>
        <EditText
	        android:id="@+id/email"
	        android:layout_width="0dip"
	        android:layout_weight="1.0"
	        android:layout_marginLeft="6dip"
	        android:layout_height="wrap_content"
	        android:background="@drawable/maincolor_boder_white_input"
	        android:singleLine="true"
	        android:hint="@string/hint_email"
	        android:textSize="12sp"
	        android:gravity="top"
	        android:textColor="@color/blk"/>
    </LinearLayout>
    
     <Button
         android:id="@+id/button_commit"
         android:layout_width="fill_parent"
         android:layout_height="40dip"
         android:layout_marginTop="10dip"
         android:background="@drawable/button_commit"
         android:text="@string/btn_commit"
         android:textColor="@color/text_btn_commit_selector"
         android:textSize="20sp" />

</LinearLayout>